# mask

./: .gitignore  README.md  notebook_1.ipynb  notebook_2.ipynb  pyproject.toml  requirements.txt
src/build_model/: README.md  __init__.py  build_model.py  config.cfg  fake_ticket_data.py  prepare_dataset.py  train.spacy
src/masking/: Home.py  __init__.py  attributedb.py  config.py  data.py  data_config.py  detect_ticket_pii.py  education.json  error.py  generalization_tree.py  gt.py  mask_text.py  privacy_factor.py  simulation.py  ticketdb.py  ticketstate.py  tree.json  utility.py
src/masking/info/: streamlit_app_readme.md
src/masking/input/: agent.csv  attribute.csv  attribute2.csv  category.csv  category_8.csv  ticket.csv  ticket_arrival_rate1.csv  ticket_template.json
src/masking/input/agent_10/: agent_10.csv  ticket_count1000_sensitive0.csv  ticket_count1000_sensitive10.csv  ticket_count1000_sensitive100.csv  ticket_count1000_sensitive20.csv  ticket_count1000_sensitive30.csv  ticket_count1000_sensitive40.csv  ticket_count1000_sensitive50.csv  ticket_count1000_sensitive60.csv  ticket_count1000_sensitive70.csv  ticket_count1000_sensitive80.csv  ticket_count1000_sensitive90.csv
src/masking/input/agent_15/: agent_15.csv  ticket_count1000_sensitive0.csv  ticket_count1000_sensitive10.csv  ticket_count1000_sensitive100.csv  ticket_count1000_sensitive20.csv  ticket_count1000_sensitive30.csv  ticket_count1000_sensitive40.csv  ticket_count1000_sensitive50.csv  ticket_count1000_sensitive60.csv  (+3 more)
src/masking/ner/: eval.spacy
src/masking/test1/: README.md
(+191 files in other folders)
