[project]
name = "masking"
version = "0.1.0"
description = "Anonymization Module (PESO)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0",
    "spacy>=3.7.6",
    "streamlit>=1.38.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "faker>=28.0.0",
    "tabulate>=0.9.0",
    "ortools>=9.10.4067",
    "ipykernel>=6.29.5",
    "tqdm>=4.66.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
